--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@
             </div>
         </div>
 
+        <div class="footer">
+        <p>© 2025 - PEÑAHUB - Todos los derechos reservados</p>
+    </div>
     
     </div>
 </body>
